# pytemplate

./: .gitignore  LICENSE  README.rst  development.ini  production.ini  pyproject.toml  requirements.txt  testing.ini
config/samples/: defaults.ini.sample  development.ini.sample  myscript.ini.sample  production.ini.sample  pshell.ini.sample  testing.ini.sample  websrv-dev.ini.sample  websrv.ini.sample  zeo.config.sample
myproj/: __init__.py  myscript.py  settings.py
myproj/models/: __init__.py  tcm.py
myproj/templates/: layout.jinja2  mytemplate.jinja2
myproj/views/: default.py  notfound.py
tests/: conftest.py  test_views.py
